cropped logo and fixed navbar colors

--- a/fresh_jekyll/assets/css/css_main.css
+++ b/fresh_jekyll/assets/css/css_main.css
@@ -52,6 +52,32 @@ img
 	color: white;
 }
 
-.activepage {
+.greedy-nav .visible-links a:before {
+  background-color: #FFB81C;
+}
+
+.activeNav {
 	color: green;
+}
+
+.greedy-nav .hidden-links {
+	background: #003594;	
+}
+
+.greedy-nav .hidden-links a:hover {
+	background: #003594;
+	color: white;
+	border-bottom: 3px solid #FFB81C;
+}
+
+.navicon, .navicon::before, .navicon::after {
+	background-color: #FFB81C;	
+}
+
+.close .navicon::before,.close .navicon::after {
+	background-color: #FFB81C;	
+}
+
+.greedy-nav__toggle:hover .navicon, .greedy-nav__toggle:hover .navicon::before, .greedy-nav__toggle:hover .navicon::after {
+	background-color: #FFD579;
 }
